using lombok and Service and enabling actuators

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -57,3 +57,7 @@ insights.upload.mimetype=application/vnd.redhat.testareno.ma-xavier+json
 insights.upload.accountnumber=123454
 insights.upload.origin=ma-xavier
 
+#Spring Boot Actuators
+endpoints.actuator.enabled=true
+
+
